# python-fastapi-manager

./: pyproject.toml
fastapi_manager/: __init__.py  __main__.py
fastapi_manager/apps/: __init__.py  config.py  registry.py
fastapi_manager/conf/: __init__.py  global_settings.py
fastapi_manager/core/: asgi.py  lifespan.py  logger.py
fastapi_manager/core/cli/: __init__.py  typer.py
fastapi_manager/core/cli/commands/: __init__.py  base.py  create_project.py  migrations.py  run_server.py  template_creation.py
fastapi_manager/core/templates/: __init__.py  base.py  contents.py  templates.py
fastapi_manager/db/: __init__.py  connection.py
fastapi_manager/db/connection/: __init__.py  base.py  connections.py
fastapi_manager/db/fields/: __init__.py
fastapi_manager/db/migrations/: __init__.py  loader.py  migrate.py  models.py  recorder.py  utils.py
fastapi_manager/db/migrations/operations/: __init__.py  (+2 more)
fastapi_manager/db/models/: __init__.py  base.py  meta.py  mixins.py  model.py
fastapi_manager/router/: __init__.py  base.py  conf.py
fastapi_manager/services/: __init__.py  base.py
fastapi_manager/utils/: module_loading.py  string.py
fastapi_manager/views/: __init__.py  base.py  generics.py  metadata.py  mixins.py  views.py
fastapi_manager/viewsets/: __init__.py  base.py
tests/: conftest.py  local_config.py  test_cli.py  test_settings.py  test_templates.py
tests/apps/: test_app_registry.py  test_config.py
tests/apps/test_app/: config.py  models.py
tests/migrations/: conftest.py  operations.py  test_migration_recorder.py
tests/models/: test_meta.py
