[tool.poetry]
name = "python-fastapi-manager"
packages = [{include="fastapi_manager"}]
version = "0.1.0"
description = ""
authors = ["AstralMortem <chaliukvladyslav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
